RESOLVED FIXED199214
CagedPtr doesn't merge PAC bits back into the resulting caged pointer.
https://bugs.webkit.org/show_bug.cgi?id=199214
Summary CagedPtr doesn't merge PAC bits back into the resulting caged pointer.
Keith Miller
Reported 2019-06-25 18:02:07 PDT
CagedPtr doesn't merge PAC bits back into the resulting caged pointer.
Attachments
Patch (2.64 KB, patch)
2019-06-25 18:04 PDT, Keith Miller
no flags
Patch (2.78 KB, patch)
2019-06-25 18:19 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2019-06-25 18:04:00 PDT
Keith Miller
Comment 2 2019-06-25 18:19:58 PDT
EWS Watchlist
Comment 3 2019-06-25 18:22:42 PDT
Attachment 372888 [details] did not pass style-queue: ERROR: Source/WTF/wtf/CagedPtr.h:32: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 4 2019-06-25 18:48:36 PDT
Comment on attachment 372888 [details] Patch r=me
WebKit Commit Bot
Comment 5 2019-06-25 19:25:25 PDT
Comment on attachment 372888 [details] Patch Clearing flags on attachment: 372888 Committed r246827: <https://trac.webkit.org/changeset/246827>
WebKit Commit Bot
Comment 6 2019-06-25 19:25:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2019-06-26 16:47:59 PDT
Note You need to log in before you can comment on or make changes to this bug.