CagedPtr doesn't merge PAC bits back into the resulting caged pointer. https://bugs.webkit.org/show_bug.cgi?id=199214

Reviewed by Yusuke Suzuki.

The current code means that caging will just strip the any failed
authentication bits. Adding this code doesn't appear to be a
regression on iPhone Xs.

* wtf/CagedPtr.h:
(WTF::CagedPtr::get const):
(WTF::CagedPtr::getMayBeNull const):
(WTF::CagedPtr::getUnsafe const):
(WTF::CagedPtr::mergePointers):


Canonical link: https://commits.webkit.org/213179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246827 268f45cc-cd09-0410-ab3c-d52691b4dbfc